add some routes